Update branding, add sidebar TOC and new styles
Rename site branding from "SKACULT" to "skaCULT" across templates and content; introduce a docs-style left sidebar driven by outline.yml and an on-page table-of-contents (assets/toc.js) with heading slugging and intersection-observer highlighting. Revamp styles (style.css and _site/style.css) for a cleaner, docs-like UI, and update layouts/includes (default, nav, footer, about-drawer, contact) to render the sidebar/TOC and load the new script. Generated site files in _site were updated to match.

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,4 +1,4 @@
-- title: "SKACULT / SKA (this site)"
+- title: "skaCULT / SKA (this site)"
   description: "A maintainable hub for projects + links. Mock-church wrapper, real content."
   status: "Active"
   featured: true
