--- a/_data/outline.yml
+++ b/_data/outline.yml
@@ -6,6 +6,8 @@
       url: "/projects"
     - label: "Contact"
       url: "/contact"
+    - label: "Croissant"
+      url: "/croissant"
 
 - section: "Folders"
   items:
